[gd_scene load_steps=12 format=3 uid="uid://dl1becyep5n8l"]

[ext_resource type="PackedScene" uid="uid://bjtqnkqwvtqki" path="res://entity.tscn" id="1_u4hrm"]
[ext_resource type="Texture2D" uid="uid://b2pqxj5o7smbi" path="res://Asset/ChickenBody.png" id="2_gi3w4"]
[ext_resource type="Script" path="res://Source/Boss_Chicken.gd" id="2_xuvb7"]
[ext_resource type="Texture2D" uid="uid://drels2dboohh3" path="res://Asset/BossChickenBody3.png" id="3_brho8"]
[ext_resource type="Texture2D" uid="uid://2q3uo2lt5ssy" path="res://Asset/BossChickenBody2.png" id="4_d1u4e"]
[ext_resource type="Texture2D" uid="uid://dpxl4wpjsw5je" path="res://Asset/BossChickenBody.png" id="5_u73nf"]
[ext_resource type="SpriteFrames" uid="uid://84mmi5wq84fj" path="res://Asset/SpriteFrames/Explosion.tres" id="7_rpk0s"]

[sub_resource type="Animation" id="Animation_64qyv"]
resource_name = "default"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 49, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChickenBody:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 30), Vector2(0, 0), Vector2(0, 0), Vector2(0, 30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gx0q5"]
_data = {
"default": SubResource("Animation_64qyv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4k6bu"]
radius = 122.691

[sub_resource type="CircleShape2D" id="CircleShape2D_t80rn"]
radius = 109.018

[node name="BossChicken" instance=ExtResource("1_u4hrm")]
collision_layer = 2
collision_mask = 4
script = ExtResource("2_xuvb7")
HP = 200.0
speed = 7000.0
direction = Vector2(-1, 0)
savedPos = Vector2(500, 300)

[node name="ChickenBody" type="Sprite2D" parent="AnimationCenter" index="0"]
texture_filter = 1
position = Vector2(0, 31)
scale = Vector2(1.745, 1.745)
texture = ExtResource("2_gi3w4")
offset = Vector2(0, 15)
hframes = 50
frame = 37

[node name="BossChickenBody3" type="Sprite2D" parent="AnimationCenter" index="1"]
visible = false
texture_filter = 1
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_brho8")

[node name="BossChickenBody2" type="Sprite2D" parent="AnimationCenter" index="2"]
visible = false
texture_filter = 1
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_d1u4e")

[node name="BossChickenBody" type="Sprite2D" parent="AnimationCenter" index="3"]
texture_filter = 1
position = Vector2(0, -3)
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_u73nf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationCenter" index="4"]
libraries = {
"": SubResource("AnimationLibrary_gx0q5")
}
autoplay = "default"

[node name="HitBox" parent="." index="1"]
visible = false
collision_layer = 512
collision_mask = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_4k6bu")
debug_color = Color(0.984314, 0, 0.341176, 0.164706)

[node name="Explosion" type="AnimatedSprite2D" parent="." index="2"]
scale = Vector2(7, 7)
sprite_frames = ExtResource("7_rpk0s")
animation = &"explosion"
frame = 8
frame_progress = 1.0

[node name="PhysicBox" parent="." index="3"]
visible = false
shape = SubResource("CircleShape2D_t80rn")

[node name="AttackTimer" type="Timer" parent="." index="4"]
wait_time = 8.0
autostart = true

[node name="Marker" type="Node2D" parent="." index="5"]

[node name="AttackHole" type="Marker2D" parent="Marker" index="0"]
position = Vector2(0, 95)

[node name="Wing1" type="Marker2D" parent="Marker" index="1"]
position = Vector2(-59, 0)

[node name="Wing2" type="Marker2D" parent="Marker" index="2"]
position = Vector2(59, 0)

[node name="Audio" type="AudioStreamPlayer" parent="." index="6"]
bus = &"GameSFX"

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
